add structure to file

--- a/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
+++ b/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
@@ -782,3 +782,19 @@ balansvergelijking %>%
   theme(legend.title = element_blank())
 ```
 
+
+# Nabehandeling steekproef
+## Filteren op basis van zichtbaarheid
+
+...
+
+
+## Uitdunnen
+
+...
+
+
+## Overlap met bestaande telpunten
+
+...
+
