--- a/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
+++ b/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
@@ -41,31 +41,30 @@ targets_store <- here("src", "targets", "mas_steekproef_zavelberg", "_targets")
 
 ## Perimeter bepalen
 
-Intersectie landbouwstreek zandleemstreek in België met contour Vlaanderen. Nieuwe file geschreven "zandleemstreek_perimeters.gpkg" met enkel de zandleemstreek multipolygoon.
+Intersectie landbouwstreek zandleemstreek in België met contour Vlaanderen.
+Nieuwe file geschreven "zandleemstreek_perimeters.gpkg" met enkel de zandleemstreek multipolygoon.
 
-```
-# Code uitvoeren in mas_steekproef_zavelberg.Rproj
-# na laden van globals in targets_steekproef_zavelberg.Rmd
+    # Code uitvoeren in mas_steekproef_zavelberg.Rproj
+    # na laden van globals in targets_steekproef_zavelberg.Rmd
 
-library(sf)
+    library(sf)
 
-# Lees in polygonen landbouwstreken
-landbouwstreken <- read_sf(file.path(mbag_dir, "data", "landbouwstreken", 
-                                     "Lbstrbel.shp")) |>
-  st_transform(crs = 31370)
+    # Lees in polygonen landbouwstreken
+    landbouwstreken <- read_sf(file.path(mbag_dir, "data", "landbouwstreken", 
+                                         "Lbstrbel.shp")) |>
+      st_transform(crs = 31370)
 
-# Behoud Zandleemstreek
-vlaanderen <- read_sf("S:/Vlaanderen/Grenzen/Administratief/Vlaanderen.shp") |>
-  st_transform(crs = 31370)
+    # Behoud Zandleemstreek
+    vlaanderen <- read_sf("S:/Vlaanderen/Grenzen/Administratief/Vlaanderen.shp") |>
+      st_transform(crs = 31370)
 
-zandleem_vlaanderen <- st_intersection(landbouwstreken, vlaanderen) |>
-  filter(NAAM == "Zandleemstreek") |>
-  mutate(section = NA) |>
-  select(Naam = NAAM, section, geom = geometry)
+    zandleem_vlaanderen <- st_intersection(landbouwstreken, vlaanderen) |>
+      filter(NAAM == "Zandleemstreek") |>
+      mutate(section = NA) |>
+      select(Naam = NAAM, section, geom = geometry)
 
-st_write(obj = zandleem_vlaanderen,
-         dsn = path_to_perimeters("zandleemstreek_perimeters.gpkg"))
-```
+    st_write(obj = zandleem_vlaanderen,
+             dsn = path_to_perimeters("zandleemstreek_perimeters.gpkg"))
 
 ```{r}
 perimeters_data <- tar_read(perimeters_data, store = targets_store)
@@ -73,20 +72,19 @@ perimeters_data <- tar_read(perimeters_data, store = targets_store)
 mapview(perimeters_data, color = "red", alpha.regions = 0, legend = FALSE)
 ```
 
-
 ## Selectie openheid landschap
 
 We maken gebruik van het DSM (digitaal oppervlakte model - DHMV II Vlaanderen) en DTM (digitaal terrein model) op 5 m resolutie.
 Werkwijze:
 
-- berekening "canopy height model" (CHM) door verschil te berekenen tussen DSM en DTM. Dit geeft dan hoogte boven het maaiveld (gebouwen, bodem, struiken, ...).
-- berekening van "positive topographic openness" (dit is een waarde tussen 0 en 2 in radians) door voor elke rastercel van het CHM in 8 kijkrichtingen na te gaan wat de gemiddelde hoek is t.o.v. zenith binnen een straal van 300m. Deze hoek geeft aan hoe plat het landschap is. Indien volledig plat is de hoek 90° (of 1.57 radians).
-- met dit resultaat de gemiddelde (van de gemiddelde) topografische openheid berekenen in een cirkelvormig landschap rond elke cel met straal 300 m.
-- deze gemiddelden zijn daarna ingedeeld in drie klassen:
-    - OL open landschap (> 86,5°), 
-    - HOL halfopen landschap (77,3° - 86,5°),
-    - HGL halfgesloten landschap (71,6° - 77,3°)
-    - GL (< 71,6°) gesloten landschap
+-   berekening "canopy height model" (CHM) door verschil te berekenen tussen DSM en DTM. Dit geeft dan hoogte boven het maaiveld (gebouwen, bodem, struiken, ...).
+-   berekening van "positive topographic openness" (dit is een waarde tussen 0 en 2 in radians) door voor elke rastercel van het CHM in 8 kijkrichtingen na te gaan wat de gemiddelde hoek is t.o.v. zenith binnen een straal van 300m. Deze hoek geeft aan hoe plat het landschap is. Indien volledig plat is de hoek 90° (of 1.57 radians).
+-   met dit resultaat de gemiddelde (van de gemiddelde) topografische openheid berekenen in een cirkelvormig landschap rond elke cel met straal 300 m.
+-   deze gemiddelden zijn daarna ingedeeld in drie klassen:
+    -   OL open landschap (\> 86,5°),
+    -   HOL halfopen landschap (77,3° - 86,5°),
+    -   HGL halfgesloten landschap (71,6° - 77,3°)
+    -   GL (\< 71,6°) gesloten landschap
 
 We selecteren OL en HOL binnen de perimeters.
 
@@ -97,80 +95,80 @@ mapview(perimeters_data, color = "red", alpha.regions = 0, legend = FALSE) +
   mapview(selectie_openheid_klasses, col.regions = "red", legend = FALSE)
 ```
 
-
 ## Exclusie van bepaalde landgebruiken
 
-We gebruiken kenmerken uit [OpenStreetMap](https://www.openstreetmap.org) om bepaalde landgebruiken uit te sluiten voor de steekproeftrekking. We gebruiken hiervoor de kenmerken [landuse](https://wiki.openstreetmap.org/wiki/NL:Key:landuse) (grondgebruik), [leisure](https://wiki.openstreetmap.org/wiki/NL:Key:leisure) (vrije tijd), [aeroway](https://wiki.openstreetmap.org/wiki/Key:aeroway) (luchthaven) en [highway](https://wiki.openstreetmap.org/wiki/Key:highway) (wegen). De links in voorgaande zin verwijzen naar de volledige lijst van mogelijke klassen.  
-  
-We knippen we onderstaande landgebruiken uit de openheid selectie. Rond autosnelwegen en invoegstroken en afritten van autosnelwegen trekken we een buffer van 50 m.
-  
+We gebruiken kenmerken uit [OpenStreetMap](https://www.openstreetmap.org) om bepaalde landgebruiken uit te sluiten voor de steekproeftrekking.
+We gebruiken hiervoor de kenmerken [landuse](https://wiki.openstreetmap.org/wiki/NL:Key:landuse) (grondgebruik), [leisure](https://wiki.openstreetmap.org/wiki/NL:Key:leisure) (vrije tijd), [aeroway](https://wiki.openstreetmap.org/wiki/Key:aeroway) (luchthaven) en [highway](https://wiki.openstreetmap.org/wiki/Key:highway) (wegen).
+De links in voorgaande zin verwijzen naar de volledige lijst van mogelijke klassen.
+
+We knippen we onderstaande landgebruiken uit de openheid selectie.
+Rond autosnelwegen en invoegstroken en afritten van autosnelwegen trekken we een buffer van 50 m.
+
 ### Woongebied
 
 -   OSM definitie: `landuse = residential`
 -   Objecttype: woongebied
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dresidential
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dresidential>
 
 ### Militair terrein
 
 -   OSM definitie: `landuse = military`
 -   Objecttype: militair terrein
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dmilitary
-  
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dmilitary>
+
 ### Industriegebied
 
 -   OSM definitie: `landuse = industrial`
 -   Objecttype: industriegebied
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dindustrial
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dindustrial>
 
 ### Begraafplaats
 
 -   OSM definitie: `landuse = cemetary`
 -   Objecttype: begraafplaats
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dcemetery
-  
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dcemetery>
+
 ### Spoorwegemplacement, spoorbedding
 
 -   OSM definitie: `landuse = railway`
 -   Objecttype: spoorwegemplacement, spoorbedding
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:landuse%3Drailway
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:landuse%3Drailway>
 
 ### Commercieel
 
 -   OSM definitie: `landuse = commercial`
 -   Objecttype: commercieel
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dcommercial
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dcommercial>
 
 ### Boerenerf
 
 -   OSM definitie: `landuse = farmyard`
 -   Objecttype: boerenerf
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dfarmyard
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dfarmyard>
 
 ### Park
 
 -   OSM definitie: `leisure = park`
 -   Objecttype: park
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dpark
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dpark>
 
 ### Vliegveld
 
 -   OSM definitie: `aeroway = aerodrome`
 -   Objecttype: vliegveld
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:aeroway%3Daerodrome
-
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:aeroway%3Daerodrome>
 
 ### Autosnelweg
 
 -   OSM definitie: `highway = motorway`
 -   Objecttype: autosnelweg
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:highway%3Dmotorway
-
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:highway%3Dmotorway>
 
 ### Invoegstroken en afritten van autosnelwegen
 
 -   OSM definitie: `highway = motorway_link`
 -   Objecttype: invoegstroken en afritten van autosnelwegen
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:highway%3Dmotorway_link
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:highway%3Dmotorway_link>
 
 Verder vereenvoudigen van de polygonenkaart door:
 
@@ -196,10 +194,15 @@ detail_sf <- tibble(geometry = st_as_sfc(st_bbox(detail))) %>%
 ```
 
 ```{r}
+openheid_crop <- st_crop(selectie_openheid_klasses, detail)
+selectie_openheid_klasses_crop <- st_cast(openheid_crop)[which(
+  st_is(st_cast(openheid_crop), c("POLYGON", "MULTIPOLYGON"))), ]  %>% 
+  summarise()
+
 mapview(st_crop(perimeters_data, detail), color = "red", alpha.regions = 0, 
         legend = FALSE) +
   mapview(detail_sf, color = "purple", alpha.regions = 0, legend = FALSE) +
-  mapview(st_crop(selectie_openheid_klasses, detail), col.regions = "red", 
+  mapview(selectie_openheid_klasses_crop, col.regions = "red", 
           legend = FALSE) +
   mapview(st_crop(exclusie_osm_landgebruiken, detail), col.regions = "green", 
           legend = FALSE)
@@ -207,57 +210,58 @@ mapview(st_crop(perimeters_data, detail), color = "red", alpha.regions = 0,
 
 ## Bepalen geldige plaatsen waar telling kan uitgevoerd worden
 
-We gebruiken kenmerken uit [OpenStreetMap](https://www.openstreetmap.org) om geldige locaties te extraheren waar tellingen kunnen uitgevoerd worden. We gebruiken hiervoor het kenmerk [highway](https://wiki.openstreetmap.org/wiki/Key:highway) (wegen).  
-  
+We gebruiken kenmerken uit [OpenStreetMap](https://www.openstreetmap.org) om geldige locaties te extraheren waar tellingen kunnen uitgevoerd worden.
+We gebruiken hiervoor het kenmerk [highway](https://wiki.openstreetmap.org/wiki/Key:highway) (wegen).
+
 We selecteren de volgende wegen.
 
 ### Veldwegen en boswegen
 
 -   OSM definitie: `highway = track`
 -   Objecttype: veldwegen en boswegen
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:highway%3Dtrack
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:highway%3Dtrack>
 
 ### Voetpad
 
 -   OSM definitie: `highway = footway`
 -   Objecttype: voetpad
--   OSM Wiki: https://en.wikipedia.org/wiki/nl:Voetpad
+-   OSM Wiki: <https://en.wikipedia.org/wiki/nl:Voetpad>
 
 ### (Bos)Pad
 
 -   OSM definitie: `highway = path`
 -   Objecttype: (bos)pad
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/NL:Tag:highway%3Dpath
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/NL:Tag:highway%3Dpath>
 
 ### Fietspad
 
 -   OSM definitie: `highway = cycleway`
 -   Objecttype: fietspad
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/NL:Tag:highway%3Dcycleway
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/NL:Tag:highway%3Dcycleway>
 
 ### Ruiterpad
 
 -   OSM definitie: `highway = bridleway`
 -   Objecttype: ruiterpad
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:highway%3Dbridleway
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:highway%3Dbridleway>
 
 ### Tertiare wegen
 
 -   OSM definitie: `highway = tertiary`
 -   Objecttype: tertiare wegen
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:highway%3Dtertiary
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:highway%3Dtertiary>
 
 ### Afslagen tertiare wegen
 
 -   OSM definitie: `highway = tertiary_link`
 -   Objecttype: afslagen tertiare wegen
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:highway%3Dtertiary_link
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:highway%3Dtertiary_link>
 
 ### Lokale wegen
 
 -   OSM definitie: `highway = unclassified`
 -   Objecttype: lokale wegen
--   OSM Wiki: https://wiki.openstreetmap.org/wiki/Tag:highway%3Dunclassified
+-   OSM Wiki: <https://wiki.openstreetmap.org/wiki/Tag:highway%3Dunclassified>
 
 We verwijderen wegen die overlappen met de exclusiekaart en verwijderen overlappende wegen.
 
@@ -267,7 +271,7 @@ paden <- tar_read(paden, store = targets_store)
 mapview(st_crop(perimeters_data, detail), color = "red", alpha.regions = 0, 
         legend = FALSE) +
   mapview(detail_sf, color = "purple", alpha.regions = 0, legend = FALSE) +
-  mapview(st_crop(selectie_openheid_klasses, detail), col.regions = "red", 
+  mapview(selectie_openheid_klasses_crop, col.regions = "red", 
           legend = FALSE) +
   mapview(st_crop(exclusie_osm_landgebruiken, detail), col.regions = "green", 
           legend = FALSE) +
@@ -285,14 +289,13 @@ paden %>%
   kable(digits = 1)
 ```
 
-
 ## Punten langs de wegen en paden
 
 Werkwijze:
 
-- Langs alle paden worden op regelmatige afstanden van 50 m punten gelegd
-- Daarna worden punten die op minder dan 40 m van elkaar liggen ruimtelijk gegroepeerd (dit gebeurt wanneer verschillende paden elkaar kruisen of op korte afstand parallel aan elkaar liggen) en uit elk van deze clusters wordt één punt overgehouden
-- potentiële telpunten moeten op minstens 300 m van de grens van de perimeter gelegen zijn
+-   Langs alle paden worden op regelmatige afstanden van 50 m punten gelegd
+-   Daarna worden punten die op minder dan 40 m van elkaar liggen ruimtelijk gegroepeerd (dit gebeurt wanneer verschillende paden elkaar kruisen of op korte afstand parallel aan elkaar liggen) en uit elk van deze clusters wordt één punt overgehouden
+-   potentiële telpunten moeten op minstens 300 m van de grens van de perimeter gelegen zijn
 
 ```{r}
 punten <- tar_read(punten, store = targets_store)
@@ -300,7 +303,7 @@ punten <- tar_read(punten, store = targets_store)
 mapview(st_crop(perimeters_data, detail), color = "red", alpha.regions = 0, 
         legend = FALSE) +
   mapview(detail_sf, color = "purple", alpha.regions = 0, legend = FALSE) +
-  mapview(st_crop(selectie_openheid_klasses, detail), col.regions = "red", 
+  mapview(selectie_openheid_klasses_crop, col.regions = "red", 
           legend = FALSE) +
   mapview(st_crop(exclusie_osm_landgebruiken, detail), col.regions = "green", 
           legend = FALSE) +
@@ -317,16 +320,15 @@ punten %>%
   kable()
 ```
 
-
 ## Exclusie van potentiële telpunten / telcirkels
+
 ### Exclusie op basis van landgebruiksamenstelling
 
 Voor elk potentieel telpunt / telcirkel:
 
-- landgebruik oppervlaktes
+-   landgebruik oppervlaktes
 
 > VITO 2019 landgebruikskaart (update elke 3 jaar)
-
 
 ```{r}
 telcirkels_selectie_landgebruik <- tar_read(telcirkels_selectie_landgebruik,
@@ -335,8 +337,7 @@ telcirkels_selectie_landgebruik <- tar_read(telcirkels_selectie_landgebruik,
 
 We gebruiken volgende regel als criterium voor telpunten die in aanmerkingen komen voor wat betreft de samenstelling van het landgebruik in een buffer van 300 m rond het punt:
 
-- Akker + Grasland > 40% én Grasland + Bos + Struikgewas + Akker > 50%
-
+-   Akker + Grasland \> 40% én Grasland + Bos + Struikgewas + Akker \> 50%
 
 De gebruikte landgebruikskaart dekt enkel het Vlaamse grondgebied.
 Indien de telcirkel deels in een andere gewest / land gelegen is, zal het landgebruik daar ontbreken.
@@ -365,14 +366,13 @@ exclusie_punten <- punten %>%
 mapview(st_crop(perimeters_data, detail), color = "red", alpha.regions = 0, 
         legend = FALSE) +
   mapview(detail_sf, color = "purple", alpha.regions = 0, legend = FALSE) +
-  mapview(st_crop(selectie_openheid_klasses, detail), col.regions = "red", 
+  mapview(selectie_openheid_klasses_crop, col.regions = "red", 
           legend = FALSE) +
   mapview(st_crop(exclusie_osm_landgebruiken, detail), col.regions = "green", 
           legend = FALSE) +
   mapview(st_crop(paden, detail), legend = FALSE) +
   mapview(st_crop(exclusie_punten, detail), col.regions = "black", legend = FALSE)
 ```
-
 
 ## Berekening volledig gekende variabelen die relatie hebben met respons
 
@@ -381,10 +381,9 @@ Dit kan bijvoorbeeld door middel van stratificatie of door te zorgen dat de stee
 
 Voor elk potentieel telpunt / telcirkel:
 
-- Beheerovereenkomst oppervlaktes: vooral de soortbeschermingsmaatregelen
-- maat voor openheid van het landschap (cf. OLA, HOLA, KLA)
-- oppervlakte-aandelen van hoofdteelten (landbouwgebruikspercelen)
-
+-   Beheerovereenkomst oppervlaktes: vooral de soortbeschermingsmaatregelen
+-   maat voor openheid van het landschap (cf. OLA, HOLA, KLA)
+-   oppervlakte-aandelen van hoofdteelten (landbouwgebruikspercelen)
 
 ### Oppervlakte-aandeel beheerovereenkomsten
 
@@ -392,15 +391,14 @@ Toestand beheerovereenkomsten 2022.
 
 Indeling voor niet-productieve gewassen / beheerovereenkomsten (instrumenten):
 
-- soortbeschermingsmaatregelen
-    - perceelsniveau
-    - randen
-- erosiemaatregelen
-- bufferstroken
+-   soortbeschermingsmaatregelen
+    -   perceelsniveau
+    -   randen
+-   erosiemaatregelen
+-   bufferstroken
 
 Voor de steekproeftrekking zijn vooral de oppervlakte aan soortbeschermingsmaatregelen van belang.
 Eventueel verder opgesplitst in winter-, zomer- en jaarrondmaatregelen.
-
 
 ```{r bo-sbp}
 steekproefkader_finaal <- tar_read(steekproefkader_finaal, store = targets_store)
@@ -433,7 +431,27 @@ steekproefkader_finaal %>%
 lbg_statistieken <- tar_read(lbg_statistics, store = targets_store)
 ```
 
-Belangrijkste teelten in 2022:
+Belangrijkste teelten in 2022. Voorlopige kaart. Finale kaart wordt eind maart gepubliceerd. Omzetten naar .parquet file.
+
+```
+# Code uitvoeren in mas_steekproef_zavelberg.Rproj
+# na laden van globals in targets_steekproef_zavelberg.Rmd
+    
+file <- sf::read_sf(file.path(mbag_dir, "data", "landbouwgebruikspercelen", "Shapefile",
+                              "Lbgbrprc22.shp"), query = NA)
+
+temp <- file %>%
+  mutate(OIDN = NA, 
+         UIDN = NA,
+         LENGTE = NA,
+         OPPERVL = NA) %>%
+  select(OIDN, UIDN, ALVID = REF_ID, HFDTLT = GWSCOD_H, LBLHFDTLT = GWSNAM_H, 
+         GEWASGROEP = GWSGRPH_LB, PM = GESP_PM, LBLPM = GESP_PM_LB, LENGTE, OPPERVL)
+
+sfarrow::st_write_parquet(obj = temp, 
+  dsn = file.path(mbag_dir, "data", "landbouwgebruikspercelen", "parquet",
+                  "lbgbrprc2022.parquet"), chunk_size = 10000)
+```
 
 ```{r lbg-per-hoofdteelt}
 lbg_statistieken %>%
@@ -469,17 +487,17 @@ lbg_statistieken %>%
 
 Een logische en veelgebruikte opdeling voor gewassen is:
 
-- graangewassen (monocotylen zoals tarwe, gerst, etc..) 
-- grasland (opdelen permanent en tijdelijk)
-- mais
-- aardappelen
-- wortelgewassen (biet, chicorei, wortel)
-- peulvruchten (erwt)
-- groententeelt (kolen zoals bloemkool, brocolli, spruiten, prei, ajuin, sla)
-- groenbemester (klavers, luzerne, mosterd) of koolzaad
-- meerjarige fruitteelt (appel, peer, kers, ea)
-- vlas
-- andere (vb eenjarig fruitteelt) 
+-   graangewassen (monocotylen zoals tarwe, gerst, etc..)
+-   grasland (opdelen permanent en tijdelijk)
+-   mais
+-   aardappelen
+-   wortelgewassen (biet, chicorei, wortel)
+-   peulvruchten (erwt)
+-   groententeelt (kolen zoals bloemkool, brocolli, spruiten, prei, ajuin, sla)
+-   groenbemester (klavers, luzerne, mosterd) of koolzaad
+-   meerjarige fruitteelt (appel, peer, kers, ea)
+-   vlas
+-   andere (vb eenjarig fruitteelt)
 
 Hier gebruiken we de indeling volgens 'gewasgroep' zoals deze in de landbouwgebruikspercelenkaart zit.
 
@@ -514,34 +532,34 @@ lbg_statistieken %>%
   theme(axis.title.y = element_blank())
 ```
 
-
 ### Openheid landschap
 
 We maken gebruik van het DSM (digitaal oppervlakte model - DHMV II Vlaanderen) en DTM (digitaal terrein model) op 5 m resolutie.
 Werkwijze:
 
-- berekening "canopy height model" (CHM) door verschil te berekenen tussen DSM en DTM. Dit geeft dan hoogte boven het maaiveld (gebouwen, bodem, struiken, ...).
-- berekening van "positive topographic openness" (dit is een waarde tussen 0 en 2 in radians) door voor elke rastercel van het CHM in 8 kijkrichtingen na te gaan wat de gemiddelde hoek is t.o.v. zenith binnen een straal van 300m. Deze hoek geeft aan hoe plat het landschap is. Indien volledig plat is de hoek 90° (of 1.57 radians).
-- met dit resultaat de gemiddelde (van de gemiddelde) topografische openheid berekenen in een cirkelvormig landschap rond elke cel met straal 300 m.
-- deze gemiddelden zijn daarna ingedeeld in drie klassen:
-    - OL open landschap (> 86,5°), 
-    - HOL halfopen landschap (77,3° - 86,5°),
-    - HGL halfgesloten landschap (71,6° - 77,3°)
-    - GL (< 71,6°) gesloten landschap
+-   berekening "canopy height model" (CHM) door verschil te berekenen tussen DSM en DTM. Dit geeft dan hoogte boven het maaiveld (gebouwen, bodem, struiken, ...).
+-   berekening van "positive topographic openness" (dit is een waarde tussen 0 en 2 in radians) door voor elke rastercel van het CHM in 8 kijkrichtingen na te gaan wat de gemiddelde hoek is t.o.v. zenith binnen een straal van 300m. Deze hoek geeft aan hoe plat het landschap is. Indien volledig plat is de hoek 90° (of 1.57 radians).
+-   met dit resultaat de gemiddelde (van de gemiddelde) topografische openheid berekenen in een cirkelvormig landschap rond elke cel met straal 300 m.
+-   deze gemiddelden zijn daarna ingedeeld in drie klassen:
+    -   OL open landschap (\> 86,5°),
+    -   HOL halfopen landschap (77,3° - 86,5°),
+    -   HGL halfgesloten landschap (71,6° - 77,3°)
+    -   GL (\< 71,6°) gesloten landschap
 
 Akkervogelgemeenschappen worden vaak ingedeeld volgens hun affiniteit met open landschap (OLA - Open landschap Akkervogels), half-open landschap (HOLA) en kleinschalig landschap (KLA).
 Onder kleinschalig landschap verstaat men een landschap waar de percelen relatief klein zijn en het landschap in sterke mate dooraderd is door hagen, rietkragen en andere lijn- of puntvormige kleine landschapselementen (KLE's).
 De manier waarop we openheid van het landschap hebben bepaald laat niet toe om KLA te bepalen zonder bijkomende berekeningen.
 KLA zullen een subset zijn van wat wij HOL noemen, met name HOL waar de gemiddelde perceelsgrootte relatief klein is.
 
-We hadden in de eerste stap al OL en HOL geselecteerd. Toch is er nog een beetje HGL over maar in de allocatie zullen deze punten wegvallen.
+We hadden in de eerste stap al OL en HOL geselecteerd.
+Toch is er nog een beetje HGL over maar in de allocatie zullen deze punten wegvallen.
 
 ```{r landschap-openheid}
 openheid_classified <- rast(
   here("data", "dem",
        "openness300m_chm_res25_c300_mean_vlaanderen_classified.tif")) %>%
-  crop(perimeters) %>%
-  mask(terra::vect(perimeters))
+  crop(perimeters_data) %>%
+  mask(terra::vect(perimeters_data))
 ```
 
 ```{r landschapsopenheid, warning=FALSE}
@@ -564,12 +582,14 @@ steekproefkader_finaal %>%
        y = "Aantal potentiële telpunten (steekproefkader)")
 ```
 
-
 ### Soortbeschermingsplan
 
-Zowel binnen kerngebied als zoekzones zijn er soortbeschermende maatregelen (SB BO's) gelegd (zie kaart VLM BO's). In theorie waren deze maatregelen vooral bedoeld voor kerngebied, en zal daar een hogere dichtheid (bedekkingsgraad) liggen, maar de VLM heeft het toegelaten om ook in zoekzones deze maatregelen te sluiten (al was dat minder de prioriteit). Daar werd bv in de Moeren geen rekening mee gehouden, en werden erg veel SB BOs gelegd, ook omdat dit gebied wél kerngebied is  In de toekomst heeft VLM beloofd om meer/enkel rekening te houden met kerngebied, en dus nog meer te sturen op.  
-  
-We nemen kerngebieden en zoekzones samen als onderzoeksgebied en alles hierbuiten beschouwen we als controle. Als SBP laag gebruiken we perimeter SBP akkervogels, SBP grauwe kiekendief en SBP hamster.
+Zowel binnen kerngebied als zoekzones zijn er soortbeschermende maatregelen (SB BO's) gelegd (zie kaart VLM BO's).
+In theorie waren deze maatregelen vooral bedoeld voor kerngebied, en zal daar een hogere dichtheid (bedekkingsgraad) liggen, maar de VLM heeft het toegelaten om ook in zoekzones deze maatregelen te sluiten (al was dat minder de prioriteit).
+Daar werd bv in de Moeren geen rekening mee gehouden, en werden erg veel SB BOs gelegd, ook omdat dit gebied wél kerngebied is In de toekomst heeft VLM beloofd om meer/enkel rekening te houden met kerngebied, en dus nog meer te sturen op.
+
+We nemen kerngebieden en zoekzones samen als onderzoeksgebied en alles hierbuiten beschouwen we als controle.
+Als SBP laag gebruiken we perimeter SBP akkervogels, SBP grauwe kiekendief en SBP hamster.
 
 > SBP grauwe kiekendief en SBP hamster nog implementeren
 
@@ -609,7 +629,6 @@ opps %>%
   kable(digits = 2)
 ```
 
-
 ### Overzicht
 
 ```{r}
@@ -620,7 +639,7 @@ steekproefkader_finaal_strata <- steekproefkader_finaal %>%
 mapview(st_crop(perimeters_data, detail), color = "red", alpha.regions = 0, 
         legend = FALSE) +
   mapview(detail_sf, color = "purple", alpha.regions = 0, legend = FALSE) +
-  mapview(st_crop(selectie_openheid_klasses, detail), col.regions = "red", 
+  mapview(selectie_openheid_klasses_crop, col.regions = "red", 
           legend = FALSE) +
   mapview(st_crop(exclusie_osm_landgebruiken, detail), col.regions = "green", 
           legend = FALSE) +
@@ -629,37 +648,38 @@ mapview(st_crop(perimeters_data, detail), color = "red", alpha.regions = 0,
           layer = "stratum")
 ```
 
-
 # Trekking steekproef zandleemstreek
+
 ## Stratificatie steekproef
 
-- Stratificatie:
-    - binnen vs. buiten SBP perimeter
-        - allocatiefactor 50 %
-    - OL vs. HOL landschap
-        - allocatiefactor proportioneel aan aantal potentiële telpunten (~ stratumoppervlakte)
-- Gebalanceerde en goed gespreide trekking:
-        - ruimtelijk (x- en y-coördinaten)
-        - oppervlakte aandeel beheerovereenkomsten
+-   Stratificatie:
+    -   binnen vs. buiten SBP perimeter
+        -   allocatiefactor 50 %
+    -   OL vs. HOL landschap
+        -   allocatiefactor proportioneel aan aantal potentiële telpunten (\~ stratumoppervlakte)
+-   Gebalanceerde en goed gespreide trekking: - ruimtelijk (x- en y-coördinaten) - oppervlakte aandeel beheerovereenkomsten
 
 Allocatie van de steekproefgrootte over de verschillende strata:
 
-- Hier moeten we afweging maken tussen de precisie per stratum en precisie voor de leemstreek in zijn geheel.
-    - Voor het geheel zou een allocatie evenredig een de oppervlakte van elk stratum wellicht de voorkeur hebben.
-    - Indien we echter ook geïnteresseerd zijn in uitspraken voor elk stratum apart en in onderlinge vergelijkingen tussen de strata, dan is een allocatie waarbij in elk stratum evenveel punten liggen meer aangewezen.
+-   Hier moeten we afweging maken tussen de precisie per stratum en precisie voor de leemstreek in zijn geheel.
+    -   Voor het geheel zou een allocatie evenredig een de oppervlakte van elk stratum wellicht de voorkeur hebben.
+    -   Indien we echter ook geïnteresseerd zijn in uitspraken voor elk stratum apart en in onderlinge vergelijkingen tussen de strata, dan is een allocatie waarbij in elk stratum evenveel punten liggen meer aangewezen.
 
 Tussen deze twee scenario's zijn er veel tussenposities.
 In het algemeen kunnen we voor een kostenoptimale allocatie gebruik maken van een formule die stelt dat de allocatie recht evenredig is met de oppervlakte van een stratum en de variabilitiet in een stratum en omgekeerd evenredig is met de vierkantswortel van de kosten van het veldwerk in het stratum.
 
-***Hoe is het nu gedaan?***  
-  
+***Hoe is het nu gedaan?***
+
 Target sample size is het maximaal aantal plots die binnen de OL, HOL perimeters kunnen gelegd worden.
 
 ```{r}
 st_area(selectie_openheid_klasses) / units::set_units(300 * 300 * pi, m^2)
 ```
 
-Minima onder $\times$4 scenario. 4 strata (OL, HOL en binnen, buiten sbp) met minstens 50 telpunten per stratum. $\times$4 betekend halvering betrouwbaarheidsinterval $\rightarrow$ minimum sample size is 200 telpunten per stratum. Population size minimum is op $200 / 0.05 = 4000$ gezet.
+Minima onder $\times 4$ scenario.
+4 strata (OL, HOL en binnen, buiten sbp) met minstens 50 telpunten per stratum.
+$\times 4$ betekend halvering betrouwbaarheidsinterval $\rightarrow$ minimum sample size is 200 telpunten per stratum.
+Population size minimum is op $200 / 0.05 = 4000$ gezet.
 
 ```{r}
 allocatie <- tar_read(allocatie_df, store = targets_store) %>%
@@ -674,20 +694,21 @@ allocatie %>%
   kable(digits = 3)
 ```
 
-
 ## Steekproeftrekking
 
 We trekken geen veelvoud van het vooropgestelde aantal telpunten getrokken worden (enkel eerste batch van punten).
 Elk telpunt zal een volgnummer hebben.
-De eerste bv. 300 (laagste volgnummers) zullen dan de set zijn voor de zandleemstreek, die kan verdeeld worden over de medewerkers.
+De eerste bv.
+300 (laagste volgnummers) zullen dan de set zijn voor de zandleemstreek, die kan verdeeld worden over de medewerkers.
 Indien een punt uitvalt, kan dit vervangen worden door het eerstvolgende uit de reeks dat nog niet toegewezen werd (het 301ste).
 De methode garandeert dat deze nieuwe set ruimtelijk goed gespreid is en een aselecte steekproef is.
 
 Temporeel design:
 
-- elk punt wordt elk jaar opnieuw bezocht
+-   elk punt wordt elk jaar opnieuw bezocht
 
-N.B. voor de steekproef over Vlaanderen is het best mogelijk dat een ander temporeel design nodig is zoals een 'rotating panel design' of een 'augmented panel design'.
+N.B.
+voor de steekproef over Vlaanderen is het best mogelijk dat een ander temporeel design nodig is zoals een 'rotating panel design' of een 'augmented panel design'.
 
 ```{r trekking}
 steekproef <- tar_read(steekproef_zichtbaarheid, store = targets_store) %>%
@@ -732,7 +753,8 @@ balansvergelijking %>%
   theme(legend.title = element_blank())
 ```
 
-Een confounding probleem is dat HOL gemiddeld oostelijker gelegen is dan OL binnen en buiten de SBP perimeter. Ook is HOL gemiddeld iets zuidelijker gelegen binnen de SBP perimeter dan OL.
+Een confounding probleem is dat HOL gemiddeld oostelijker gelegen is dan OL binnen en buiten de SBP perimeter.
+Ook is HOL gemiddeld iets zuidelijker gelegen binnen de SBP perimeter dan OL.
 
 ```{r}
 balansvergelijking %>%
@@ -770,7 +792,8 @@ balansvergelijking %>%
 
 We zien wel dat de steekproef een goede afspiegeling is van de volledige populatie (boxplots voor steekproef en populatie zijn zeer gelijkend).
 
-> Hier niet van toepassing. Steekproef is volledige populatie.
+> Hier niet van toepassing.
+> Steekproef is volledige populatie.
 
 ```{r}
 balansvergelijking %>%
@@ -782,19 +805,16 @@ balansvergelijking %>%
   theme(legend.title = element_blank())
 ```
 
-
 # Nabehandeling steekproef
+
 ## Filteren op basis van zichtbaarheid
 
 ...
-
 
 ## Uitdunnen
 
 ...
 
-
 ## Overlap met bestaande telpunten
 
 ...
-
