--- a/src/markdown/mas/visibility.Rmd
+++ b/src/markdown/mas/visibility.Rmd
@@ -315,9 +315,9 @@ stop <- proc.time()
 stop - start
 ```
 
-```{r vvi-ol}
+```{r vvi-ol-25}
 start <- proc.time()
-vvi_ol <- vvi_from_sf(
+vvi_ol_25 <- vvi_from_sf(
     observer = ol_25mpoly,
     spacing = 25,
     cores = 1,
@@ -334,6 +334,24 @@ ol_time <- stop - start
 ol_time
 ```
 
+```{r vvi-ol-10}
+start <- proc.time()
+vvi_ol_10 <- vvi_from_sf(
+    observer = ol_25mpoly,
+    spacing = 10,
+    cores = 1,
+    progress = TRUE,
+    max_distance = 300,
+    dsm_rast = dsm_ol,
+    dtm_rast = dtm_ol,
+    observer_height = 1.7,
+    raster_res = 5,
+    output_type = "cumulative",
+    by_row = TRUE)
+stop <- proc.time()
+ol_time_10 <- stop - start
+ol_time_10
+```
 
 ```{r}
 vvi_dm_viewshed <- vvi_from_sf(
@@ -378,12 +396,22 @@ dm_25mpoly %>%
 
 ```{r}
 ol_25mpoly %>%
-  bind_cols(vvi_ol) %>%
+  bind_cols(vvi_ol_25 %>% rename(cvvi_25 = cvvi)) %>%
+  bind_cols(vvi_ol_10 %>% rename(cvvi_10 = cvvi)) %>%
   ggplot() +
   geom_sf(data = ol) +
   geom_sf(aes(fill = cvvi, colour = cvvi))
 ```
 
+```{r}
+ol_25mpoly %>%
+  bind_cols(vvi_ol_25 %>% rename(cvvi_25 = cvvi)) %>%
+  bind_cols(vvi_ol_10 %>% rename(cvvi_10 = cvvi)) %>%
+  ggplot() +
+  geom_point(aes(x = cvvi_25, y = cvvi_10)) +
+  geom_abline() +
+  labs(x = "cvvi 25m spacing", y = "cvvi 10m spacing")
+```
 
 ```{r}
 vvi_dm %>%
@@ -392,7 +420,7 @@ vvi_dm %>%
 ```
 
 ```{r}
-vvi_ol %>%
+vvi_ol_25 %>%
   bind_cols(ol_25mpoly) %>%
   ggplot() + 
   geom_density(aes(x = cvvi, fill = openheid_klasse), alpha = 0.2)
@@ -425,7 +453,7 @@ En in de Oostelijke leemstreek:
 
 ```{r}
 ol_25mpoly %>%
-  bind_cols(vvi_ol) %>%
+  bind_cols(vvi_ol_25) %>%
   ungroup() %>%
   mutate(pointid = reorder(pointid, cvvi, mean)) %>%
   ggplot() +
