--- a/src/markdown/mas/visibility.Rmd
+++ b/src/markdown/mas/visibility.Rmd
@@ -432,7 +432,7 @@ vvi_ol_25 %>%
 steekproefkader <- tar_read(steekproefkader_finaal, store = targets_store)
 ```
 
-Berekening op volledige steekproefkader (Moeren en Leemstreek) zou ongeveer `r round(nrow(steekproefkader) / nrow(ol_25mpoly) * ol_time["elapsed"] /3600, 1)` uur duren bij resolutie van 5 m en spacing van 25 m en batch size van `nrow(ol_25mpoly)`. Een wat kleinere batch size is waarschijnlijk sneller.
+Berekening op volledige steekproefkader (Moeren en Leemstreek) zou ongeveer `r round(nrow(steekproefkader) / nrow(ol_25mpoly) * ol_time["elapsed"] /3600, 1)` uur duren bij resolutie van 5 m en spacing van 25 m en batch size van `r nrow(ol_25mpoly)`. Een wat kleinere batch size is waarschijnlijk sneller.
 
 ## Wanneer is zichtbaarheid te laag?
 
