--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -311,7 +311,7 @@ list(
                ),
              pattern = map(telcirkels_landgebruik)
   ),
-  tar_target(name = punten_steekproefkader,
+  tar_target(name = punten_selectie_landgebruik,
              command = selectie_landgebruik_vito(
                punten_sf = punten,
                selectie_df = telcirkels_selectie_landgebruik
@@ -319,12 +319,17 @@ list(
              pattern = map(punten, telcirkels_selectie_landgebruik)
   ),
   tar_target(
-    punten_steekproefkader_zichtbaarheid,
-    filter_zichtbaarheid(sample = punten_steekproefkader,
-                         min_cvvi = 0.1,
-                         resolution = 5,
-                         spacing = 10),
-    pattern = map(punten_steekproefkader)
+    punten_zichtbaarheid,
+    add_visibility_to_frame(punten_sf = punten_selectie_landgebruik,
+                            resolution = 5,
+                            spacing = 10),
+    pattern = map(punten_selectie_landgebruik)
+  ),
+  tar_target(
+    punten_selectie_zichtbaarheid,
+    filter_zichtbaarheid(sample = punten_zichtbaarheid,
+                         min_cvvi = 0.1),
+    pattern = map(punten_zichtbaarheid)
   )
 )
 ```
@@ -341,9 +346,9 @@ list(
   tar_target(
     name = plus_sb,
     command = add_bo_to_frame(
-      punten_df = punten_steekproefkader_zichtbaarheid,
+      punten_df = punten_selectie_zichtbaarheid,
       path_bo = bo_file),
-    pattern = map(punten_steekproefkader_zichtbaarheid)
+    pattern = map(punten_selectie_zichtbaarheid)
     ),
   tar_target(
     name = lbg_statistics,
