change argument name sample to punten_sf

--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -327,7 +327,7 @@ list(
   ),
   tar_target(
     punten_selectie_zichtbaarheid,
-    filter_zichtbaarheid(sample = punten_zichtbaarheid,
+    filter_zichtbaarheid(punten_sf = punten_zichtbaarheid,
                          min_cvvi = 0.1),
     pattern = map(punten_zichtbaarheid)
   )
