add target tar_group_size

--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -318,17 +318,26 @@ list(
              ),
              pattern = map(punten, telcirkels_selectie_landgebruik)
   ),
-  tar_target(
-    punten_zichtbaarheid,
-    add_visibility_to_frame(punten_sf = punten_selectie_landgebruik,
-                            resolution = 5,
-                            spacing = 10),
-    pattern = map(punten_selectie_landgebruik)
+  tarchetypes::tar_group_size(
+    name = punten_selectie_landgebruik_per_size,
+    command = punten_selectie_landgebruik,
+    size = 200
   ),
   tar_target(
-    punten_selectie_zichtbaarheid,
-    filter_zichtbaarheid(punten_sf = punten_zichtbaarheid,
-                         min_cvvi = 0.1),
+    name = punten_zichtbaarheid,
+    command = add_visibility_to_frame(
+      punten_sf = punten_selectie_landgebruik_per_size,
+      resolution = 5,
+      spacing = 10
+    ),
+    pattern = map(punten_selectie_landgebruik_per_size)
+  ),
+  tar_target(
+    name = punten_selectie_zichtbaarheid,
+    command = filter_zichtbaarheid(
+      punten_sf = punten_zichtbaarheid,
+                         min_cvvi = 0.1
+    ),
     pattern = map(punten_zichtbaarheid)
   )
 )
