--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -362,8 +362,8 @@ list(
   tar_target(
     name = lbg_statistics,
     command = calc_lbg(path = lbg_file,
-                       punten_sf = punten_steekproefkader),
-    pattern = map(punten_steekproefkader)
+                       punten_sf = punten_selectie_zichtbaarheid),
+    pattern = map(punten_selectie_zichtbaarheid)
   ),
   tar_target(
     name = plus_openheid_landschap,
